--- a/signalmanager/Dockerfile
+++ b/signalmanager/Dockerfile
@@ -2,8 +2,8 @@ FROM python:3
 ENV PYTHONUNBUFFERED 1
 RUN mkdir /usr/src/app
 RUN apt update -y
+#RUN apt install gcc python3-dev musl-dev -y
 RUN apt install netcat -y
-
 WORKDIR  /usr/src/app
 COPY requirements.txt  /usr/src/app/
 RUN pip install -r requirements.txt
@@ -12,4 +12,3 @@ COPY . /usr/src/app/
 RUN chmod 755 /usr/src/app/entrypoint.sh
 
 ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
-
