--- a/.env-sample
+++ b/.env-sample
@@ -1,8 +1,12 @@
 DEBUG=0
 SECRET_KEY=ChangeMe
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
-SQL_HOST=todo_db
+SQL_HOST=signal_db
 SQL_PORT=5432
-SQL_DB=todo_db
+SQL_DB=signal_db
 SQL_USER=postgres
 SQL_PASSWORD=postgres
+WEB_HTTP_INTERNAL=8000
+WEB_HTTP_PORT=880
+WEB_HTTPS_PORT=8443
+WEB_HTTPS_INTERNAL=4430
