--- a/signalmanager/requirements.txt
+++ b/signalmanager/requirements.txt
@@ -1,9 +1,69 @@
-Django>=2.0,<3.0
-psycopg2>=2.7,<3.0
-pytest
-django-extensions
-djangorestframework
-pytest-django
-django-bootstrap4
-django-crispy-forms
-gunicorn
+psycopg2-binary
+Django==2.2.6
+django-background-tasks==1.2.0
+django-bootstrap4==1.1.1
+django-compat==1.0.15
+django-crispy-forms==1.7.0
+django-extensions==2.2.5
+django-sslserver==0.20
+django-telegrambot==1.0.1
+djangorestframework==3.9.4
+python-telegram-bot==12.0.0b1
+asn1crypto==0.24.0
+attrs==19.3.0
+bcrypt==3.1.7
+beautifulsoup4==4.8.1
+cached-property==1.5.1
+certifi==2019.3.9
+cffi==1.12.2
+chardet==3.0.4
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==2.6.1
+distro==1.5.0
+dj-database-url==0.4.2
+Django==2.2.6
+django-background-tasks==1.2.0
+django-bootstrap4==1.1.1
+django-compat==1.0.15
+django-crispy-forms==1.7.0
+django-extensions==2.2.5
+django-sslserver==0.20
+django-telegrambot==1.0.1
+djangorestframework==3.9.4
+docker==4.2.2
+docker-compose==1.26.2
+dockerpty==0.4.1
+docopt==0.6.2
+dpath==1.4.2
+future==0.17.1
+gunicorn==19.7.1
+idna==2.8
+importlib-metadata==1.7.0
+itypes==1.1.0
+Jinja2==2.10
+jsonschema==3.2.0
+Markdown==2.6.10
+MarkupSafe==1.1.1
+oandapyV20==0.6.3
+paramiko==2.7.1
+pycparser==2.19
+Pygments==2.2.0
+PyNaCl==1.4.0
+pyrsistent==0.16.0
+python-dotenv==0.14.0
+python-telegram-bot==12.0.0b1
+pytz==2018.9
+PyYAML==5.2
+requests==2.21.0
+six==1.12.0
+soupsieve==1.9.5
+sqlparse==0.3.0
+texttable==1.6.2
+tgmagic==1.0
+tornado==6.0.1
+uritemplate==3.0.0
+urllib3==1.24.1
+websocket-client==0.57.0
+whitenoise==3.3.1
+zipp==3.1.0
