--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,8 @@ services:
   nginx:
     build: ./nginx
     ports:
-      - ${WEB_HTTP_INTERNAL}:${WEB_HTTP_PORT}
-      - ${WEB_HTTPS_INTERNAL}:${WEB_HTTPS_PORT}
+      - ${WEB_HTTP_PORT}:80
+      - ${WEB_HTTPS_PORT}:443
     depends_on:
       - web
 
