--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
       run: docker-compose --verbose up -d
     - name: Check running containers
       run: docker ps
-    - name: Check db
-      run: docker exec
+    # - name: Check db
+    #   run: docker exec
     - name: Run test suite
       run: docker exec todo_backend pytest
   redeploy:
