--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
 
 
   web:
-    container_name: ${BACKED_NAME}
+    container_name: ${BACKEND_NAME}
     build: ./signalmanager
     env_file:
       - ./.env
@@ -36,3 +36,5 @@ services:
 
 volumes:
   postgres_data:
+    name: ${POSTGRES_VOLUME}
+
