--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,6 +1,5 @@
 FROM nginx:1.19.2-alpine
 
-RUN rm /etc/nginx/conf.d/default.conf
+#RUN rm /etc/nginx/conf.d/default.conf
 
-COPY nginx.conf.template /etc/nginx/templates/
-
+COPY *.template /etc/nginx/templates/
