--- a/signalmanager/requirements.txt
+++ b/signalmanager/requirements.txt
@@ -15,7 +15,7 @@ bcrypt==3.1.7
 beautifulsoup4==4.8.1
 cached-property==1.5.1
 certifi==2019.3.9
-cffi==1.12.2
+#cffi==1.12.2
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
@@ -67,3 +67,4 @@ urllib3==1.24.1
 websocket-client==0.57.0
 whitenoise==3.3.1
 zipp==3.1.0
+django-dbbackup==3.3.0
