--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,12 @@ services:
       - POSTGRES_DB=${SQL_DB}
       - POSTGRES_PORT=${SQL_PORT}
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - ./database/:/var/lib/postgresql/data/
     expose:
       - ${SQL_PORT}
     restart: always
+    privileged: true
+
 
   web:
     container_name: ${BACKEND_NAME}
@@ -49,9 +51,9 @@ services:
       - db
 
 
-volumes:
-  postgres_data:
-    name: ${POSTGRES_VOLUME}
+#volumes:
+#  postgres_data:
+#    name: ${POSTGRES_VOLUME}
 
 networks:
   default:
