more change to fix bugs

--- a/signalmanager/Dockerfile-mnt
+++ b/signalmanager/Dockerfile-mnt
@@ -5,9 +5,9 @@ RUN apt update -y
 #RUN apt install gcc python3-dev musl-dev -y
 RUN apt install netcat-traditional wget gettext vim lsb-release -y
 RUN wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
-RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" | tee  /etc/apt/sources.list.d/pgdg.list
+#RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" | tee  /etc/apt/sources.list.d/pgdg.list
 RUN apt update -y
-RUN apt install postgresql-client-12 -y
+RUN apt install postgresql-client -y
 WORKDIR  /usr/src/app
 COPY requirements.txt  /usr/src/app/
 RUN pip install -r requirements.txt
