--- a/signalmanager/Dockerfile-mnt
+++ b/signalmanager/Dockerfile-mnt
@@ -12,7 +12,7 @@ WORKDIR  /usr/src/app
 COPY requirements.txt  /usr/src/app/
 RUN pip install -r requirements.txt
 COPY . /usr/src/app/
-COPY ./entrypoint-q.sh  /usr/src/app/entrypoint-mnt.sh
+COPY ./entrypoint-mnt.sh  /usr/src/app/entrypoint-mnt.sh
 #RUN find . -name migrations -type d  |  xargs rm -r
 
 RUN chmod 755 /usr/src/app/entrypoint-mnt.sh
